updated css for responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,41 @@
 
 .container {
   max-width: 1440px;
-  margin-left: 10px;
-  margin-right: auto;
-  margin-top: 70px;
+  margin: auto;
 }
 .BallBeat {
   width: 100%;
-  position: fixed;
-  margin-top: 30px;
+  margin: auto;
   text-align: center;
+}
+
+.App {
+  text-align: center;
+}
+
+.scrollTop {
+  position: fixed;
+  width: 100%;
+  bottom: 20px;
+  align-items: center;
+  height: 20px;
+  justify-content: center;
+  z-index: 1000;
+  cursor: pointer;
+  animation: fadeIn 0.3s;
+  transition: opacity 0.4s;
+  opacity: 0.5;
+}
+
+.scrollTop:hover {
+  opacity: 1;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.5;
+  }
 }
